
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef void* int64_t ;
struct TYPE_3__ {int seek_req; int continue_read_thread; int seek_flags; void* seek_rel; void* seek_pos; } ;
typedef TYPE_1__ VideoState ;


 int AVSEEK_FLAG_BYTE ;
 int SDL_CondSignal (int ) ;

__attribute__((used)) static void stream_seek(VideoState *is, int64_t pos, int64_t rel, int seek_by_bytes)
{
    if (!is->seek_req) {
        is->seek_pos = pos;
        is->seek_rel = rel;
        is->seek_flags &= ~AVSEEK_FLAG_BYTE;
        if (seek_by_bytes)
            is->seek_flags |= AVSEEK_FLAG_BYTE;
        is->seek_req = 1;
        SDL_CondSignal(is->continue_read_thread);
    }
}
